doing the responsive finiquitando medium mobiles
doing the responsive finiquitando medium mobiles

--- a/index.html
+++ b/index.html
@@ -85,10 +85,10 @@
 			</ul>
 
 		    <ol id="indicadores">			
-				<li role-slide = "1"><span class="fa fa-circle"></span></li>
-				<li role-slide = "2"><span class="fa fa-circle"></span></li>
-				<li role-slide = "3"><span class="fa fa-circle"></span></li>
-				<li role-slide = "4"><span class="fa fa-circle"></span></li>
+				<li role-slide = "1"><span class="fa fa-circle carrouselCircle"></span></li>
+				<li role-slide = "2"><span class="fa fa-circle carrouselCircle"></span></li>
+				<li role-slide = "3"><span class="fa fa-circle carrouselCircle"></span></li>
+				<li role-slide = "4"><span class="fa fa-circle carrouselCircle"></span></li>
 			</ol>
 
 			<div id="slideIzq"><span class="fa fa-chevron-left"></span></div>
@@ -106,22 +106,22 @@
 <div class="top">
 	<div class="container-fluid">
 		<div class="row">
-			<div class="col-lg-3 text-center">
+			<div class="col-lg-3 col-md-6 text-center">
 				<img src="img/icono01.png" alt="icon" class="img-responsive">
 				<h4>Lorem Ipsum</h4>
 				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit</p>
 			</div>
-			<div class="col-lg-3 text-center">
+			<div class="col-lg-3 col-md-6 text-center">
 				<img src="img/icono02.png" alt="icon" class="img-responsive">
 				<h4>Lorem Ipsum</h4>
 				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit</p>
 			</div>
-			<div class="col-lg-3 text-center">
+			<div class="col-lg-3 col-md-6 text-center">
 				<img src="img/icono03.png" alt="icon" class="img-responsive">
 				<h4>Lorem Ipsum</h4>
 				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit</p>
 			</div>
-			<div class="col-lg-3 text-center">
+			<div class="col-lg-3 col-md-6 text-center">
 				<img src="img/icono04.png" alt="icon" class="img-responsive">
 				<h4>Lorem Ipsum</h4>
 				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit</p>
@@ -144,36 +144,36 @@
 			</div>
 		</div>
 		<div class="row imagesRivers">
-			<div class="col-lg-2">
+			<div class="col-lg-2 col-md-2">
 				<img src="img/galeria/photo01.JPG" alt="imagesCascade" class="img-responsive">
 			</div>
-			<div class="col-lg-2">
+			<div class="col-lg-2 col-md-2">
 				<img src="img/galeria/photo02.JPG" alt="imagesCascade" class="img-responsive">
 			</div>
-			<div class="col-lg-2">
+			<div class="col-lg-2 col-md-2">
 				<img src="img/galeria/photo03.JPG" alt="imagesCascade" class="img-responsive">
 			</div>
-			<div class="col-lg-2">
+			<div class="col-lg-2 col-md-2">
 				<img src="img/galeria/photo04.JPG" alt="imagesCascade" class="img-responsive">
 			</div>
-			<div class="col-lg-2">
+			<div class="col-lg-2 col-md-2">
 				<img src="img/galeria/photo01.JPG" alt="imagesCascade" class="img-responsive">
 			</div>
 		</div>
 		<div class="row imagesRivers">
-			<div class="col-lg-2">
+			<div class="col-lg-2 col-md-2">
 				<img src="img/galeria/photo04.JPG" alt="imagesCascade" class="img-responsive">
 			</div>
-			<div class="col-lg-2">
+			<div class="col-lg-2 col-md-2">
 				<img src="img/galeria/photo03.JPG" alt="imagesCascade" class="img-responsive">
 			</div>
-			<div class="col-lg-2">
+			<div class="col-lg-2 col-md-2">
 				<img src="img/galeria/photo02.JPG" alt="imagesCascade" class="img-responsive">
 			</div>
-			<div class="col-lg-2">
+			<div class="col-lg-2 col-md-2">
 				<img src="img/galeria/photo01.JPG" alt="imagesCascade" class="img-responsive">
 			</div>
-			<div class="col-lg-2">
+			<div class="col-lg-2 col-md-2">
 				<img src="img/galeria/photo04.JPG" alt="imagesCascade" class="img-responsive">
 			</div>
 		</div>
@@ -197,10 +197,10 @@
 		<div class="row">
 			<div class="col-lg-6">
 				<div class="row">
-					<div class="col-lg-4">
+					<div class="col-lg-4 col-md-5">
 						<img src="img/articulos/landscape01.jpg" alt="placeTheWord" class="img-responsive img-thumbnail">
 					</div>
-					<div class="col-lg-8">
+					<div class="col-lg-8 col-md-7">
 						<h2>lorem ipsum</h2>
 						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lorem ipsum dolor sit amet,consectetur adipiscing elit. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
 						<button type="button" class="btn btn-outline-secondary">leer más</button>
@@ -209,10 +209,10 @@
 			</div>
 			<div class="col-lg-6">
 				<div class="row">
-					<div class="col-lg-4">
+					<div class="col-lg-4 col-md-5">
 						<img src="img/articulos/landscape02.jpg" alt="placeTheWord" class="img-responsive img-thumbnail">
 					</div>
-					<div class="col-lg-8">
+					<div class="col-lg-8 col-md-7">
 						<h2>lorem ipsum</h2>
 						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lorem ipsum dolor sit amet,consectetur adipiscing elit. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
 						<button type="button" class="btn btn-outline-secondary">leer más</button>
@@ -223,10 +223,10 @@
 		<div class="row">
 			<div class="col-lg-6">
 				<div class="row">
-					<div class="col-lg-4">
+					<div class="col-lg-4 col-md-5">
 						<img src="img/articulos/landscape03.jpg" alt="placeTheWord" class="img-responsive img-thumbnail">
 					</div>
-					<div class="col-lg-8">
+					<div class="col-lg-8 col-md-7">
 						<h2>lorem ipsum</h2>
 						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lorem ipsum dolor sit amet,consectetur adipiscing elit. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
 						<button type="button" class="btn btn-outline-secondary">leer más</button>
@@ -235,10 +235,10 @@
 			</div>
 			<div class="col-lg-6">
 				<div class="row">
-					<div class="col-lg-4">
+					<div class="col-lg-4 col-md-5">
 						<img src="img/articulos/landscape04.jpg" alt="placeTheWord" class="img-responsive img-thumbnail">
 					</div>
-					<div class="col-lg-8">
+					<div class="col-lg-8 col-md-7">
 						<h2>lorem ipsum</h2>
 						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lorem ipsum dolor sit amet,consectetur adipiscing elit. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
 						<button type="button" class="btn btn-outline-secondary">leer más</button>
@@ -264,22 +264,22 @@
 			</div>
 		</div>
 		<div class="row">
-			<div class="col-lg-3">
+			<div class="col-lg-3 col-md-6">
 				<video autobuffer autoloop loop controls width="100%">
 					<source src="videos/video01.mp4" type="video/mp4">
 				</video>
 			</div>
-			<div class="col-lg-3">
+			<div class="col-lg-3 col-md-6">
 				<video autobuffer autoloop loop controls width="100%">
 					<source src="videos/video02.mp4" type="video/mp4">
 				</video>
 			</div>
-			<div class="col-lg-3">
+			<div class="col-lg-3 col-md-6">
 				<video autobuffer autoloop loop controls width="100%">
 					<source src="videos/video03.mp4" type="video/mp4">
 				</video>
 			</div>
-			<div class="col-lg-3">
+			<div class="col-lg-3 col-md-6">
 				<video autobuffer autoloop loop controls width="100%">
 					<source src="videos/video04.mp4" type="video/mp4">
 				</video>
@@ -295,18 +295,65 @@
 =============================================*/-->
 <div class="contacts">
 	<div class="container-fluid">
-		<div class="row">
-			<div class="col-lg-6">
-				<div id="googleMap" style="width:100%;height:400px;"></div>
+		<div class="row galleryTitle">
+			<div class="col-lg-12 text-center">
+				<h1>contáctenos</h1>
 			</div>
-			<div class="col-lg-6"></div>
+		</div>
+		<div class="row">
+			<div class="col-lg-6 col-md-6">
+				<div id="map" style="width:100%;height:400px;"></div>
+				<div class="jumbotron" style="width: 100%; height: 250px;">
+					<div class="container-fluid contactsDirection">
+						<i class="fas fa-mobile-alt"> +56 3621 4521</i>
+						<i class="fas fa-map-marker-alt"> calle nueva 141, dpto 611, la comuna florida</i>
+						<i class="fas fa-envelope"> jackleiker10@gmail.com</i>
+					</div>
+				</div>
+			</div>
+			<div class="col-lg-6 col-md-6 contactsStyles">
+				<div class="row">
+					<div class="col-lg-12 text-center">
+						<a href="#" title="">
+							<span class="fa-stack fa-2x">
+							  <i class="fas fa-circle fa-stack-2x"></i>
+							  <i class="fab fa-facebook-f fa-stack-1x fa-inverse"></i>
+							</span>
+						</a>
+						<a href="#" title="">
+							<span class="fa-stack fa-2x">
+							  <i class="fas fa-circle fa-stack-2x"></i>
+							  <i class="fab fa-youtube fa-stack-1x fa-inverse"></i>
+							</span>
+						</a>
+						<a href="#" title="">
+							<span class="fa-stack fa-2x">
+							  <i class="fas fa-circle fa-stack-2x"></i>
+							  <i class="fab fa-vimeo-v fa-stack-1x fa-inverse"></i>
+							</span>
+						</a>
+					</div>
+				</div>
+				<div class="row">
+					<div class="col-lg-12">
+						<form action="" method="post" accept-charset="utf-8">
+							<div class="form-group col-lg-12">
+								<input type="name" name="" class="form-control" placeholder="Nombre">
+							</div>
+							<div class="form-group col-lg-12">
+								<input type="email" name="" class="form-control" placeholder="Email">
+							</div>
+							<div class="form-group col-lg-12">
+								<textarea name="" class="form-control" rows="9" placeholder="Contenido del Mensaje"></textarea>	
+							</div>
+							<button type="submit" class="btn btn-default">enviar</button>
+						</form>	
+					</div>
+				</div>
+			</div>
 		</div>
 	</div>
 </div>
-
-
-
-
 <!--/*=====  End: Contacts  ======*/-->
 
 
@@ -330,7 +377,8 @@
 <script src="libs/tooltip.js"></script>
 <script src="bootstrap/dist/js/bootstrap.js"></script>
 <script src="js/script.js"></script>
-<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCPk3u8Spskki2uOa-q1hxe4Bof4OM63Vc&callback=myMap"></script>
+<script src="js/localitation.js"></script>
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC2Jq2XcQh5KY0KEHNyotlHvyAFHSWUyow&callback=initMap" async defer></script>
 
 </body>
 </html>
