Main of naviagator ready, ready header, ready jumbotron
Main of naviagator ready, ready header, ready jumbotron

--- a/backend/inicio.html
+++ b/backend/inicio.html
@@ -14,7 +14,7 @@
 <div class="inicio">
 	<div class="container-fluid">
 		<div class="row">
-			<div class="col-lg-2">
+			<div class="col-lg-2 MenuLogo">
 			  <img src="img/logotipo.png" alt="logo" class="img-responsive mx-auto d-block">
 			  <ul class="nav flex-column">
 			    <li class="nav-item">
@@ -37,7 +37,42 @@
 			    </li>
 			  </ul>
 			</div>
-			<div class="col-lg-10"></div>
+			<div class="col-lg-10">
+				<div class="row userMenu">
+					<div class="col-lg-2">
+						<a href="#" title="Mensajes">
+							<span class="fa-stack fa-2x">
+							  <i class="fas fa-circle fa-stack-2x"></i>
+							  <i class="fas fa-envelope fa-stack-1x fa-inverse"></i>
+							  <span>1</span>
+							</span>
+						</a>
+						<a href="#" title="Notificaciones">
+							<span class="fa-stack fa-2x">
+							  <i class="fas fa-circle fa-stack-2x"></i>
+							  <i class="fas fa-bell fa-stack-1x fa-inverse"></i>
+							  <span>1</span>
+							</span>
+						</a>
+					</div>
+					<div id="time" class="col-lg-8">
+						<p>domingo 12 de diciembre de 2018</p>
+						<p>7:40:35 pm</p>
+					</div>
+					<div class="col-lg-2 userMenber">
+						<img src="img/photo.jpg" alt="User" class="img-responsive img-rounded">
+						<p>jack <i class="angle-down"></i></p>
+					</div>
+				</div>
+				<div class="row">
+					<div class="jumbotron jumbotron-fluid">
+					  <div class="container">
+					    <h1 class="display-4">Fluid jumbotron</h1>
+					    <p class="lead">This is a modified jumbotron that occupies the entire horizontal space of its parent.</p>
+					  </div>
+					</div>
+				</div>
+			</div>
 		</div>
 	</div>
 </div>
