Ending the panel of control - Inicio
it was finished jumbotron y styles of botones navigator

--- a/backend/inicio.html
+++ b/backend/inicio.html
@@ -64,13 +64,30 @@
 						<p>jack <i class="angle-down"></i></p>
 					</div>
 				</div>
-				<div class="row">
+				<div class="row jumbotronWelcome">
 					<div class="jumbotron jumbotron-fluid">
 					  <div class="container">
-					    <h1 class="display-4">Fluid jumbotron</h1>
-					    <p class="lead">This is a modified jumbotron that occupies the entire horizontal space of its parent.</p>
+					    <h1 class="display-4">bienvendios</h1>
+					    <p class="lead">bienvendios al panel de control.</p>
 					  </div>
 					</div>
+				</div>
+				<div class="row botonesForNavigator">
+					<a href="" title="" class="col-lg-2 botonSlide text-center">
+						<i class="play-circle"></i>
+					</a>
+					<a href="" title="" class="col-lg-2 botonFile text-center">
+						<i class="file-alt"></i>
+					</a>
+					<a href="" title="" class="col-lg-2 botonImage text-center">
+						<i class="image"></i>
+					</a>
+					<a href="" title="" class="col-lg-2 botonFilm text-center">
+						<i class="film"></i>
+					</a>
+					<a href="" title="" class="col-lg-2 botonUsers text-center">
+						<i class="users"></i>
+					</a>
 				</div>
 			</div>
 		</div>
