finished the part desktop of begin for the aplication
position a neat list of administrator putting javascript

--- a/backend/inicio.html
+++ b/backend/inicio.html
@@ -61,7 +61,13 @@
 					</div>
 					<div class="col-lg-2 userMenber">
 						<img src="img/photo.jpg" alt="User" class="img-responsive img-rounded">
-						<p>jack <i class="angle-down"></i></p>
+						<p id="member">jack <i class="angle-down"></i>
+							<ol id="admin">
+								<li><a href="" title=""><i class="user"></i> editar perfil</a></li>
+								<li><a href="" title=""><i class="file-alt"></i> terminos y condiciones</a></li>
+								<li><a href="" title=""><i class="times"></i> salir</a></li>
+							</ol>
+						</p>
 					</div>
 				</div>
 				<div class="row jumbotronWelcome">
@@ -75,18 +81,23 @@
 				<div class="row botonesForNavigator">
 					<a href="" title="" class="col-lg-2 botonSlide text-center">
 						<i class="play-circle"></i>
+						<p>slide</p>
 					</a>
 					<a href="" title="" class="col-lg-2 botonFile text-center">
 						<i class="file-alt"></i>
+						<p>articulos</p>
 					</a>
 					<a href="" title="" class="col-lg-2 botonImage text-center">
 						<i class="image"></i>
+						<p>imagenes</p>
 					</a>
 					<a href="" title="" class="col-lg-2 botonFilm text-center">
 						<i class="film"></i>
+						<p>videos</p>
 					</a>
 					<a href="" title="" class="col-lg-2 botonUsers text-center">
 						<i class="users"></i>
+						<p>suscriptores</p>
 					</a>
 				</div>
 			</div>
