--- a/backend/inicio.html
+++ b/backend/inicio.html
@@ -11,10 +11,35 @@
 <!--/*=========================================
 =                  Begin: Inicio               =
 ===============================================*/-->
+<nav class="navbar navbar-expand-md bg-dark navbar-dark">
+	<div class="container">
+		<div class="row">
+			<div class="col-xs-12 col-sm-12">
+ 				<img src="img/logotipo.png" alt="logo" class="img-responsive mx-auto d-block">
+			</div>
+		</div>
+	</div>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="collapsibleNavbar">
+    <ul class="navbar-nav">
+      <li class="nav-item">
+        <a class="nav-link" href="#">Link</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">Link</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">Link</a>
+      </li>    
+    </ul>
+  </div>  
+</nav>
 <div class="inicio">
 	<div class="container-fluid">
 		<div class="row">
-			<div class="col-lg-2 MenuLogo">
+			<div class="col-lg-2 col-md-3 MenuLogo">
 			  <img src="img/logotipo.png" alt="logo" class="img-responsive mx-auto d-block">
 			  <ul class="nav flex-column">
 			    <li class="nav-item">
@@ -37,9 +62,9 @@
 			    </li>
 			  </ul>
 			</div>
-			<div class="col-lg-10">
+			<div class="col-lg-10 col-md-9">
 				<div class="row userMenu">
-					<div class="col-lg-2">
+					<div class="col-lg-2 col-md-3">
 						<a href="#" title="Mensajes">
 							<span class="fa-stack fa-2x">
 							  <i class="fas fa-circle fa-stack-2x"></i>
@@ -55,11 +80,11 @@
 							</span>
 						</a>
 					</div>
-					<div id="time" class="col-lg-8">
+					<div id="time" class="col-lg-8 col-md-6">
 						<p>domingo 12 de diciembre de 2018</p>
 						<p>7:40:35 pm</p>
 					</div>
-					<div class="col-lg-2 userMenber">
+					<div class="col-lg-2 col-md-3 userMenber">
 						<img src="img/photo.jpg" alt="User" class="img-responsive img-rounded">
 						<p id="member">jack <i class="angle-down"></i>
 							<ol id="admin">
@@ -79,15 +104,15 @@
 					</div>
 				</div>
 				<div class="row botonesForNavigator">
-					<a href="" title="" class="col-lg-2 botonSlide text-center">
+					<a href="" title="" class="col-lg-2 col-md-4 botonSlide text-center">
 						<i class="play-circle"></i>
 						<p>slide</p>
 					</a>
-					<a href="" title="" class="col-lg-2 botonFile text-center">
+					<a href="" title="" class="col-lg-2 col-md-4 botonFile text-center">
 						<i class="file-alt"></i>
 						<p>articulos</p>
 					</a>
-					<a href="" title="" class="col-lg-2 botonImage text-center">
+					<a href="" title="" class="col-lg-2 col-md-4 botonImage text-center">
 						<i class="image"></i>
 						<p>imagenes</p>
 					</a>
