--- a/backend/inicio.html
+++ b/backend/inicio.html
@@ -23,17 +23,26 @@
     <span class="navbar-toggler-icon"></span>
   </button>
   <div class="collapse navbar-collapse" id="collapsibleNavbar">
-    <ul class="navbar-nav">
-      <li class="nav-item">
-        <a class="nav-link" href="#">Link</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Link</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Link</a>
-      </li>    
-    </ul>
+	<ul class="nav flex-column">
+		<li class="nav-item">
+		  <a class="nav-link text-center" href="#"><i class="external-link-alt"></i> inicio</a>
+		</li>
+		<li class="nav-item">
+		  <a class="nav-link text-center" href="#"><i class="external-link-alt"></i> slide</a>
+		</li>
+		<li class="nav-item">
+		  <a class="nav-link text-center" href="#"><i class="external-link-alt"></i> articulos</a>
+		</li>
+		<li class="nav-item">
+		  <a class="nav-link text-center" href="#"><i class="external-link-alt"></i> imagenes</a>
+		</li>
+		<li class="nav-item">
+		  <a class="nav-link text-center" href="#"><i class="external-link-alt"></i> videos</a>
+		</li>
+		<li class="nav-item">
+		  <a class="nav-link text-center" href="#"><i class="external-link-alt"></i> suscriptores</a>
+		</li>
+	</ul>
   </div>  
 </nav>
 <div class="inicio">
@@ -64,7 +73,7 @@
 			</div>
 			<div class="col-lg-10 col-md-9">
 				<div class="row userMenu">
-					<div class="col-lg-2 col-md-3">
+					<div class="col-lg-2 col-md-3 col-4 messages">
 						<a href="#" title="Mensajes">
 							<span class="fa-stack fa-2x">
 							  <i class="fas fa-circle fa-stack-2x"></i>
@@ -80,11 +89,11 @@
 							</span>
 						</a>
 					</div>
-					<div id="time" class="col-lg-8 col-md-6">
+					<div id="time" class="col-lg-8 col-md-6 col-4 titleFecha">
 						<p>domingo 12 de diciembre de 2018</p>
 						<p>7:40:35 pm</p>
 					</div>
-					<div class="col-lg-2 col-md-3 userMenber">
+					<div class="col-lg-2 col-md-3 col-4 userMenber">
 						<img src="img/photo.jpg" alt="User" class="img-responsive img-rounded">
 						<p id="member">jack <i class="angle-down"></i>
 							<ol id="admin">
