designing the slidehtml module, capturing images
placing images of slideshow

--- a/backend/slide.html
+++ b/backend/slide.html
@@ -126,35 +126,30 @@
 						</p>
 					</div>
 				</div>
-				<div class="row jumbotronWelcome">
-					<div class="jumbotron jumbotron-fluid">
-					  <div class="container">
-					    <h1 class="display-4">bienvendios</h1>
-					    <p class="lead">bienvendios al panel de control.</p>
-					  </div>
+				<div class="row">
+					<div class="col-lg-12 text-center textSlideShow">
+						<p class="my-4"><i class="arrow-down"></i> Arrastra aqui tu imagen, tamaño recomendado: 1600px * 600px</p>
 					</div>
 				</div>
-				<div class="row botonesForNavigator">
-					<a href="slide.html" title="slideShow" class="col-lg-2 col-md-4 botonSlide text-center">
-						<i class="play-circle"></i>
-						<p>slide</p>
-					</a>
-					<a href="" title="" class="col-lg-2 col-md-4 botonFile text-center">
-						<i class="file-alt"></i>
-						<p>articulos</p>
-					</a>
-					<a href="" title="" class="col-lg-2 col-md-4 botonImage text-center">
-						<i class="image"></i>
-						<p>imagenes</p>
-					</a>
-					<a href="" title="" class="col-lg-2 botonFilm text-center">
-						<i class="film"></i>
-						<p>videos</p>
-					</a>
-					<a href="" title="" class="col-lg-2 botonUsers text-center">
-						<i class="users"></i>
-						<p>suscriptores</p>
-					</a>
+				<div class="row imageSlideShow">
+					<div class="col-lg-4">
+						<img src="img/slide/slide01.jpg" alt="img-slide" class="img-responsive">
+					</div>
+					<div class="col-lg-4">
+						<img src="img/slide/slide02.jpg" alt="img-slide" class="img-responsive">
+					</div>
+					<div class="col-lg-4">
+						<img src="img/slide/slide03.jpg" alt="img-slide" class="img-responsive">
+					</div>
+					<div class="col-lg-4">
+						<img src="img/slide/slide04.jpg" alt="img-slide" class="img-responsive">
+					</div>
+					<div class="col-lg-4">
+						<img src="img/slide/slide01.jpg" alt="img-slide" class="img-responsive">
+					</div>
+					<div class="col-lg-4">
+						<img src="img/slide/slide02.jpg" alt="img-slide" class="img-responsive">
+					</div>
 				</div>
 			</div>
 		</div>
