--- a/backend/index.html
+++ b/backend/index.html
@@ -6,6 +6,28 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" type="text/css" href="css/csssass/css/styles.css">
 	<link rel="stylesheet" type="text/css" href="bootstrap/dist/css/bootstrap.css">
+
+	<link rel="shortcut icon" href="img/icono.jpg" type="image/x-icon">
+	<link rel="icon" href="img/icono.jpg" type="image/x-icon">
+	
+<!-- ANOTHER APPLICATIONS -->
+	<link rel="apple-touch-icon" sizes="57x57" href="img/icono.jpg">
+	<link rel="apple-touch-icon" sizes="60x60" href="img/icono.jpg">
+	<link rel="apple-touch-icon" sizes="72x72" href="img/icono.jpg">
+	<link rel="apple-touch-icon" sizes="76x76" href="img/icono.jpg">
+	<link rel="apple-touch-icon" sizes="114x114" href="img/icono.jpg">
+	<link rel="apple-touch-icon" sizes="120x120" href="img/icono.jpg">
+	<link rel="apple-touch-icon" sizes="144x144" href="img/icono.jpg">
+	<link rel="apple-touch-icon" sizes="152x152" href="img/icono.jpg">
+	<link rel="apple-touch-icon" sizes="180x180" href="img/icono.jpg">
+	<link rel="icon" type="image/png" sizes="192x192"  href="img/icono.jpg">
+	<link rel="icon" type="image/png" sizes="32x32" href="img/icono.jpg">
+	<link rel="icon" type="image/png" sizes="96x96" href="img/icono.jpg">
+	<link rel="icon" type="image/png" sizes="16x16" href="img/icono.jpg">
+	<link rel="manifest" href="img/icono.jpg">
+	<meta name="msapplication-TileColor" content="#ffffff">
+	<meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
+	<meta name="theme-color" content="#ffffff">
 </head>
 <body>
 <!--/*=========================================
