--- a/backend/articulos.html
+++ b/backend/articulos.html
@@ -5,6 +5,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" type="text/css" href="css/csssass/css/styles.css">
+	<link rel="stylesheet" type="text/css" href="css/csssass/css/stylesShow.css">
 	<link rel="stylesheet" type="text/css" href="bootstrap/dist/css/bootstrap.css">
 
 	<link rel="shortcut icon" href="img/icono.jpg" type="image/x-icon">
@@ -31,7 +32,7 @@
 </head>
 <body>
 <!--/*=========================================
-=                  Begin: Inicio               =
+=                  Begin: Articulos               =
 ===============================================*/-->
 <nav class="navbar navbar-expand-md bg-dark navbar-dark">
 	<div class="container">
@@ -80,7 +81,7 @@
 			      <a class="nav-link text-center" href="slide.html"><i class="external-link-alt"></i> slide</a>
 			    </li>
 			    <li class="nav-item">
-			      <a class="nav-link text-center" href="articulos.html"><i class="external-link-alt"></i> articulos</a>
+			      <a class="nav-link text-center" href="#"><i class="external-link-alt"></i> articulos</a>
 			    </li>
 			    <li class="nav-item">
 			      <a class="nav-link text-center" href="#"><i class="external-link-alt"></i> imagenes</a>
@@ -126,42 +127,25 @@
 						</p>
 					</div>
 				</div>
-				<div class="row jumbotronWelcome">
-					<div class="jumbotron jumbotron-fluid">
-					  <div class="container">
-					    <h1 class="display-4">bienvendios</h1>
-					    <p class="lead">bienvendios al panel de control.</p>
-					  </div>
+				<button type="button" class="btn btn-primary buttonAddArticles">agregar articulo</button>
+				<div class="row borderTextArticles">
+					<div class="col-lg-12">
+						<form action="" method="get" accept-charset="utf-8">
+							<div class="form-group">
+								<input type="text" name="" class="form-control" placeholder="Titulo del Articulo">
+							</div>
+							<div class="form-group">
+								<textarea name="" rows="5" class="form-control" placeholder="Introduccion del Articulo"></textarea>
+							</div>
+						</form>
 					</div>
-				</div>
-				<div class="row botonesForNavigator">
-					<a href="slide.html" title="slideShow" class="col-lg-2 col-md-4 botonSlide text-center">
-						<i class="play-circle"></i>
-						<p>slide</p>
-					</a>
-					<a href="articulos.html" title="" class="col-lg-2 col-md-4 botonFile text-center">
-						<i class="file-alt"></i>
-						<p>articulos</p>
-					</a>
-					<a href="" title="" class="col-lg-2 col-md-4 botonImage text-center">
-						<i class="image"></i>
-						<p>imagenes</p>
-					</a>
-					<a href="" title="" class="col-lg-2 botonFilm text-center">
-						<i class="film"></i>
-						<p>videos</p>
-					</a>
-					<a href="" title="" class="col-lg-2 botonUsers text-center">
-						<i class="users"></i>
-						<p>suscriptores</p>
-					</a>
 				</div>
 			</div>
 		</div>
 	</div>
 </div>
 
-<!--/*===========  End of Inicio  ==============*/-->
+<!--/*===========  End of Articulos  ==============*/-->
 
 
 
