finish slidehtml and finish articlehtml I going to start with imageshtml
finish slidehtml and finish articlehtml I going to start with imageshtml

--- a/backend/imagenes.html
+++ b/backend/imagenes.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<title>Articulos</title>	
+	<title>Slide</title>	
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" type="text/css" href="css/csssass/css/styles.css">
@@ -32,7 +32,7 @@
 </head>
 <body>
 <!--/*=========================================
-=                  Begin: Articulos               =
+=                  Begin: Imagenes               =
 ===============================================*/-->
 <nav class="navbar navbar-expand-md bg-dark navbar-dark">
 	<div class="container">
@@ -54,7 +54,7 @@
 		  <a class="nav-link text-center" href="slide.html"><i class="external-link-alt"></i> slide</a>
 		</li>
 		<li class="nav-item">
-		  <a class="nav-link text-center" href="articulos.html"><i class="external-link-alt"></i> articulos</a>
+		  <a class="nav-link text-center" href="#"><i class="external-link-alt"></i> articulos</a>
 		</li>
 		<li class="nav-item">
 		  <a class="nav-link text-center" href="#"><i class="external-link-alt"></i> imagenes</a>
@@ -81,7 +81,7 @@
 			      <a class="nav-link text-center" href="slide.html"><i class="external-link-alt"></i> slide</a>
 			    </li>
 			    <li class="nav-item">
-			      <a class="nav-link text-center" href="#"><i class="external-link-alt"></i> articulos</a>
+			      <a class="nav-link text-center" href="articulos.html"><i class="external-link-alt"></i> articulos</a>
 			    </li>
 			    <li class="nav-item">
 			      <a class="nav-link text-center" href="#"><i class="external-link-alt"></i> imagenes</a>
@@ -127,81 +127,29 @@
 						</p>
 					</div>
 				</div>
-				<button type="button" class="btn btn-info buttonAddArticles">agregar articulo</button>
-				<div class="row borderTextArticles">
-					<div class="col-lg-12 editArticle">
-						<form action="" method="get" accept-charset="utf-8">
-							<div class="form-group">
-								<input type="text" name="" class="form-control" placeholder="Titulo del Articulo">
-							</div>
-							<div class="form-group">
-								<textarea name="" rows="5" class="form-control" placeholder="Introduccion del Articulo"></textarea>
-							</div>
-							<div class="form-row">
-								<div class="form-group">
-									<input type="file" name="" class="form-control-file">
-								</div>
-							</div>
-							<p>Tamaño recomendado: 800px * 400px, peso maximo 2MB</p>
-							<div class="text-center borderSelectImgArticle">
-								<img src="img/articulos/landscape01.jpg" alt="" class="img-resposnive img-thumbnail">
-							</div>
-							<div class="form-group my-4">
-								<textarea name="" rows="8" class="form-control" placeholder="Contenido del Articulo"></textarea>
-							</div>
-							<button type="submit" class="btn btn-primary buttonSaveArticle">guardar articulo</button>
-						</form>
-					</div>
-					<div class="col-lg-12 orderArticleEdit">
-						<div>
-							<a href="#" title="edit"><i class="pen"></i></a>
-							<a href="#" title="close"><i class="times"></i></a>
-						</div>
-					</div>
-					<div class="col-lg-3">
-						<img src="img/articulos/landscape02.jpg" alt="ladscapeArticle" class="img-responsive img-thumbnail">
-					</div>
-					<div class="col-lg-9">
-						<h1>Lorem Ipsum</h1>
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore ipsa hic pariatur adipisci voluptas molestias dolorum ab quo perspiciatis earum.</p>
-						<button type="button" class="btn btn-outline-secondary buttonSecondary">leer mas</button>
-					</div>
-					<div class="col-lg-12 orderArticleEdit">
-						<div>
-							<button type="button" class="btn btn-primary saveOrderArticle">guardar</button>
-						</div>
-					</div>
-					<div class="col-lg-3">
-						<div>
-							<a href="#" title="close"><i class="times"></i></a>
-							<img src="img/articulos/landscape03.jpg" alt="ladscapeArticle" class="img-responsive img-thumbnail">
-						</div>
-					</div>
-					<div class="col-lg-9">
-						<form action="" method="get" accept-charset="utf-8">
-							<div class="form-group">
-								<input type="" name="" class="form-control" placeholder="" value="Lorem Ipsum">
-							</div>
-							<div class="form-group">
-								<textarea name="" rows="5" class="form-control" placeholder="">Lorem ipsum dolor sit amet, consectetuer adipiscing elit.</textarea>
-							</div>
-						</form>
-					</div>
-					<div class="col-lg-12">
-						<div class="form-group">
-							<textarea name="" rows="9" class="form-control" placeholder="">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequatur voluptate commodi nostrum iusto assumenda maiores voluptatibus molestias iste blanditiis aliquam. Autem, aperiam qui. Voluptas, recusandae nemo incidunt pariatur veniam nobis delectus molestiae rerum nulla dolor. Iusto vitae consectetur distinctio nisi veritatis nihil, accusamus beatae voluptate, commodi vel qui voluptates doloremque. Iusto vitae consectetur distinctio nisi veritatis nihil, accusamus beatae voluptate, commodi vel qui voluptates doloremque.</textarea>
-						</div>
-					</div>
-					<div class="col-lg-12 orderArticleEdit">
-						<button type="button"class="btn btn-warning">ordenar articulos</button>
+				<div class="row">
+					<div class="col-lg-12 text-center textSlideShow">
+						<p class="my-4"><i class="arrow-down"></i> Arrastra aqui tu imagen, tamaño recomendado: 1600px * 600px</p>
 					</div>
 				</div>
+				<div class="row">
+					<div class="col-lg-12">
+						<div class="row">
+							<div class="col-lg-1"></div>
+							<div class="col-lg-1"></div>
+							<div class="col-lg-1"></div>
+							<div class="col-lg-1"></div>
+							<div class="col-lg-1"></div>
+							<div class="col-lg-2"></div>
+
+						</div>
+					</div>
+				</div>				
 			</div>
 		</div>
 	</div>
 </div>
-
-<!--/*===========  End of Articulos  ==============*/-->
+<!--/*===========  End of Imagenes  ==============*/-->
 
 
 
