--- a/backend/slide.html
+++ b/backend/slide.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<title>Backend</title>	
+	<title>Slide</title>	
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" type="text/css" href="css/csssass/css/styles.css">
@@ -178,6 +178,7 @@
 								<div class="form-group">
 									<textarea name="" class="form-control" placeholder="Descripcion"></textarea>
 								</div>
+								<button type="submit" class="btn btn-primary buttonSaveSlide">guardar</button>
 							</form>
 						</div>
 					</div>
@@ -191,6 +192,7 @@
 								<div class="form-group">
 									<textarea name="" class="form-control" placeholder="Descripcion"></textarea>
 								</div>
+								<button type="submit" class="btn btn-primary buttonSaveSlide">guardar</button>
 							</form>
 						</div>
 					</div>
@@ -212,6 +214,7 @@
 								<div class="form-group">
 									<textarea name="" class="form-control" placeholder="Descripcion"></textarea>
 								</div>
+								<button type="submit" class="btn btn-primary buttonSaveSlide">guardar</button>
 							</form>
 						</div>
 					</div>
@@ -225,10 +228,12 @@
 								<div class="form-group">
 									<textarea name="" class="form-control" placeholder="Descripcion"></textarea>
 								</div>
+								<button type="submit" class="btn btn-primary buttonSaveSlide">guardar</button>
 							</form>
 						</div>
 					</div>
 				</div>
+				
 				<!--/*=============================================
 				=            Begin: slide            =
 				=============================================*/-->
